{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 134,
  "lineage": "45af32d4-f56b-3223-e8b4-dd2b0218246f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb2d44d701678118",
            "domain": "vpc",
            "id": "eipalloc-0bb2d44d701678118",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-35-97-87.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.97.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pri_ec2_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e02e6210658716f",
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:instance/i-0393e447507ca13eb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0393e447507ca13eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0dd09f32d134ac1",
            "private_dns": "ip-10-1-3-100.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa8c2000bc9ff640",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1ba85b1e8445899",
            "tags": {
              "Name": "seoul_pri_ec2_3"
            },
            "tags_all": {
              "Name": "seoul_pri_ec2_3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ce0fddc5e579b60"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub_ec2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e02e6210658716f",
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:instance/i-003eab0f896227f60",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003eab0f896227f60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "seoul-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0619804a60bb54ef1",
            "private_dns": "ip-10-1-1-100.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.100",
            "public_dns": "ec2-43-200-254-177.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.254.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072d6fd42592784de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0a52e8482a8d030",
            "tags": {
              "Name": "seoul_pub_ec2_1"
            },
            "tags_all": {
              "Name": "seoul_pub_ec2_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ce0fddc5e579b60"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:internet-gateway/igw-0fafc033e2f168ebc",
            "id": "igw-0fafc033e2f168ebc",
            "owner_id": "263535801242",
            "tags": {
              "Name": "seoul_igw"
            },
            "tags_all": {
              "Name": "seoul_igw"
            },
            "vpc_id": "vpc-0bddf9d44c58ca245"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb2d44d701678118",
            "association_id": "eipassoc-053d717fcbd3fa993",
            "connectivity_type": "public",
            "id": "nat-065c19dcfed885cc9",
            "network_interface_id": "eni-0cd58b795b524f9b0",
            "private_ip": "10.1.1.251",
            "public_ip": "3.35.97.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d0a52e8482a8d030",
            "tags": {
              "Name": "seoul_nat"
            },
            "tags_all": {
              "Name": "seoul_nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.tf_igw",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:route-table/rtb-0498184a11bdb8fd2",
            "id": "rtb-0498184a11bdb8fd2",
            "owner_id": "263535801242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-065c19dcfed885cc9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seoul_pri_rt"
            },
            "tags_all": {
              "Name": "seoul_pri_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bddf9d44c58ca245"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:route-table/rtb-0966778551cdcae23",
            "id": "rtb-0966778551cdcae23",
            "owner_id": "263535801242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fafc033e2f168ebc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seoul_pub_rt"
            },
            "tags_all": {
              "Name": "seoul_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bddf9d44c58ca245"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pri_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sn3_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0090e4f76a7a34d94",
            "route_table_id": "rtb-0498184a11bdb8fd2",
            "subnet_id": "subnet-0a1ba85b1e8445899"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.tf_pri_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pub_sn4_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e6cac5589a6bf0f",
            "route_table_id": "rtb-0498184a11bdb8fd2",
            "subnet_id": "subnet-093a7c501c1f0c6f9"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.tf_pri_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pub_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sn1_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0071cec0ff2837d49",
            "route_table_id": "rtb-0966778551cdcae23",
            "subnet_id": "subnet-0d0a52e8482a8d030"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_pub_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pub_sn2_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044e22f0d150df785",
            "route_table_id": "rtb-0966778551cdcae23",
            "subnet_id": "subnet-02a91b25e93c77ba2"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_pub_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:security-group/sg-02ce0fddc5e579b60",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ce0fddc5e579b60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mfk-sg",
            "name_prefix": "",
            "owner_id": "263535801242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bddf9d44c58ca245"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:subnet/subnet-0d0a52e8482a8d030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0a52e8482a8d030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul_10.1.1.0/24_sn"
            },
            "tags_all": {
              "Name": "seoul_10.1.1.0/24_sn"
            },
            "vpc_id": "vpc-0bddf9d44c58ca245"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:subnet/subnet-02a91b25e93c77ba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a91b25e93c77ba2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul_10.1.2.0/24_sn"
            },
            "tags_all": {
              "Name": "seoul_10.1.2.0/24_sn"
            },
            "vpc_id": "vpc-0bddf9d44c58ca245"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:subnet/subnet-0a1ba85b1e8445899",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1ba85b1e8445899",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul_10.1.3.0/24_sn"
            },
            "tags_all": {
              "Name": "seoul_10.1.3.0/24_sn"
            },
            "vpc_id": "vpc-0bddf9d44c58ca245"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:subnet/subnet-093a7c501c1f0c6f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093a7c501c1f0c6f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul_10.1.4.0/24_sn"
            },
            "tags_all": {
              "Name": "seoul_10.1.4.0/24_sn"
            },
            "vpc_id": "vpc-0bddf9d44c58ca245"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263535801242:vpc/vpc-0bddf9d44c58ca245",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07f7e6220d56653cc",
            "default_route_table_id": "rtb-0ef0e7349ddfa4f46",
            "default_security_group_id": "sg-042c11b90dec63e73",
            "dhcp_options_id": "dopt-0fa6c85811b7a2cab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bddf9d44c58ca245",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef0e7349ddfa4f46",
            "owner_id": "263535801242",
            "tags": {
              "Name": "seoul_vpc"
            },
            "tags_all": {
              "Name": "seoul_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}